tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr34099_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr34099-2.c" (c, x86_64-unknown-linux-gnu)
fn test1(%arg6: s32i, %arg7: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: s32i, %arg7: s32i):
        %69 = alloca s32i, "b", align 4
        %70 = alloca s32i, "c", align 4
        %71 = alloca s32i, "__retval", align 4
        %72 = alloca s8i, "x", align 1
        store %arg6, %69
        store %arg7, %70
        scope {
            %74 = load %69 : s32i, align 4
            %75 = cast(int_to_bool) %74 : bool
            if %75 {
                %78 = load %72 : s8i, align 1
                %79 = cast(integral) %78 : s32i
                %80 = load %70 : s32i, align 4
                %81 = div %79, %80 : s32i
                store %81, %71
                %82 = load %71 : s32i
                return %82
            } else {
                %76 = const 1 : s32i
                store %76, %71
                %77 = load %71 : s32i
                return %77
            }
            yield
        }
        %73 = load %71 : s32i
        return %73
}
fn test2(%arg4: s32i, %arg5: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i, %arg5: s32i):
        %56 = alloca s32i, "b", align 4
        %57 = alloca s32i, "c", align 4
        %58 = alloca s32i, "__retval", align 4
        %59 = alloca s32i, "x", align 4
        store %arg4, %56
        store %arg5, %57
        scope {
            %61 = load %56 : s32i, align 4
            %62 = cast(int_to_bool) %61 : bool
            if %62 {
                %65 = load %59 : s32i, align 4
                %66 = load %57 : s32i, align 4
                %67 = mul %65, %66 : s32i [nsw]
                store %67, %58
                %68 = load %58 : s32i
                return %68
            } else {
                %63 = const 1 : s32i
                store %63, %58
                %64 = load %58 : s32i
                return %64
            }
            yield
        }
        %60 = load %58 : s32i
        return %60
}
fn test3(%arg2: s32i, %arg3: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i, %arg3: s32i):
        %43 = alloca s32i, "b", align 4
        %44 = alloca s32i, "c", align 4
        %45 = alloca s32i, "__retval", align 4
        %46 = alloca s32i, "x", align 4
        store %arg2, %43
        store %arg3, %44
        scope {
            %48 = load %43 : s32i, align 4
            %49 = cast(int_to_bool) %48 : bool
            if %49 {
                %52 = load %46 : s32i, align 4
                %53 = load %44 : s32i, align 4
                %54 = rem %52, %53 : s32i
                store %54, %45
                %55 = load %45 : s32i
                return %55
            } else {
                %50 = const 1 : s32i
                store %50, %45
                %51 = load %45 : s32i
                return %51
            }
            yield
        }
        %47 = load %45 : s32i
        return %47
}
fn test4(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %28 = alloca s32i, "b", align 4
        %29 = alloca s32i, "c", align 4
        %30 = alloca s32i, "__retval", align 4
        %31 = alloca s8i, "x", align 1
        store %arg0, %28
        store %arg1, %29
        scope {
            %33 = load %28 : s32i, align 4
            %34 = cast(int_to_bool) %33 : bool
            if %34 {
                %37 = load %31 : s8i, align 1
                %38 = cast(integral) %37 : s32i
                %39 = load %29 : s32i, align 4
                %40 = cmp eq %38, %39 : bool
                %41 = cast(bool_to_int) %40 : s32i
                store %41, %30
                %42 = load %30 : s32i
                return %42
            } else {
                %35 = const 1 : s32i
                store %35, %30
                %36 = load %30 : s32i
                return %36
            }
            yield
        }
        %32 = load %30 : s32i
        return %32
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %22 = const 1 : s32i
        %23 = const 1000 : s32i
        %24 = call @test1(%22, %23) : s32i [all]
        %25 = const 0 : s32i
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %16 = const 1 : s32i
        %17 = const 0 : s32i
        %18 = call @test2(%16, %17) : s32i [all]
        %19 = const 0 : s32i
        %20 = cmp ne %18, %19 : bool
        if %20 {
            %21 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %10 = const 1 : s32i
        %11 = const 1 : s32i
        %12 = call @test3(%10, %11) : s32i [all]
        %13 = const 0 : s32i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = const 1 : s32i
        %5 = const 1000 : s32i
        %6 = call @test4(%4, %5) : s32i [all]
        %7 = const 0 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
