tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr34154.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr34154.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: u64i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %11 = alloca u64i, "aLL", align 8
        %12 = alloca s32i, "__retval", align 4
        store %arg0, %11
        scope {
            %14 = load %11 : u64i, align 8
            switch %14 {
                case range 1000000000000000000, 9999999999999999999 {
                    %17 = const 19 : s32i
                    store %17, %12
                    %18 = load %12 : s32i
                    return %18
                }
                case default {
                    %15 = const 20 : s32i
                    store %15, %12
                    %16 = load %12 : s32i
                    return %16
                }
            }
            yield
        }
        %13 = load %12 : s32i
        return %13
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i, "aLL", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1000000000000000000 : u64i
    store %3, %1, align 8
    scope {
        %6 = load %1 : u64i, align 8
        %7 = call @foo(%6) : s32i [all]
        %8 = const 19 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
