tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr34176.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr34176.c" (c, x86_64-unknown-linux-gnu)
global foo.count : s32i = 0 [internal, default, align 4, dso_local]

fn hash_find_entry(%arg1: u64i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: u64i*):
        %43 = alloca u64i*, "result", align 8
        %44 = alloca s32i, "__retval", align 4
        store %arg1, %43
        %45 = const 2 : u64i
        %46 = load %43 : u64i*, align 8
        store %45, %46, align 8
        %47 = const 0 : s32i
        store %47, %44
        %48 = load %44 : s32i
        return %48
}
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: u64i) -> rec_mult_index* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %33 = alloca u64i, "n", align 8
        %34 = alloca rec_mult_index*, "__retval", align 8
        store %arg0, %33
        %35 = get_global @foo.count : s32i*
        scope {
            %38 = load %35 : s32i, align 4
            %39 = inc %38 : s32i [nsw]
            store %39, %35, align 4
            %40 = const 0 : s32i
            %41 = cmp gt %38, %40 : bool
            if %41 {
                %42 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %36 = const #cir.ptr<null> : rec_mult_index*
        store %36, %34
        %37 = load %34 : rec_mult_index*
        return %37
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i, "nitems", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : u64i
    store %3, %1, align 8
    scope {
        for cond: {
            %32 = const #true : bool
            condition %32
        } step: {
            yield
        } do {
            scope {
                %6 = alloca u64i, "list", align 8
                %7 = call @hash_find_entry(%6) : s32i [all]
                scope {
                    %8 = alloca u64i, "len2", align 8
                    %9 = alloca rec_mult_index*, "destptr", align 8
                    %10 = alloca rec_mult_index*, "dest", align 8
                    %11 = alloca u64i, "new_max", align 8
                    %12 = load %6 : u64i, align 8
                    store %12, %8, align 8
                    %13 = load %1 : u64i, align 8
                    %14 = load %8 : u64i, align 8
                    %15 = add %13, %14 : u64i
                    store %15, %11, align 8
                    scope {
                        %29 = load %11 : u64i, align 8
                        %30 = load %8 : u64i, align 8
                        %31 = cmp ne %29, %30 : bool
                        if %31 {
                            break
                        }
                        yield
                    }
                    %16 = load %11 : u64i, align 8
                    %17 = call @foo(%16) : rec_mult_index* [all]
                    store %17, %10, align 8
                    %18 = load %10 : rec_mult_index*, align 8
                    store %18, %9, align 8
                    scope {
                        while {
                            %26 = load %8 : u64i, align 8
                            %27 = dec %26 : u64i
                            store %27, %8, align 8
                            %28 = cast(int_to_bool) %26 : bool
                            condition %28
                        } do {
                            %23 = load %9 : rec_mult_index*, align 8
                            %24 = const 1 : s32i
                            %25 = ptr_stride %23, %24 : rec_mult_index*
                            store %25, %9, align 8
                            yield
                        }
                        yield
                    }
                    %19 = load %9 : rec_mult_index*, align 8
                    %20 = load %10 : rec_mult_index*, align 8
                    %21 = ptr_diff %19, %20 : s64i
                    %22 = cast(integral) %21 : u64i
                    store %22, %1, align 8
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
