tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr35163.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr35163.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i, "a", align 1
    %2 = alloca s8i, "b", align 1
    %3 = const 0 : s32i
    store %3, %0
    %4 = const -30 : s8i
    store %4, %1, align 1
    %5 = const -31 : s8i
    store %5, %2, align 1
    scope {
        %8 = load %1 : s8i, align 1
        %9 = cast(integral) %8 : s32i
        %10 = load %2 : s8i, align 1
        %11 = cast(integral) %10 : u16i
        %12 = cast(integral) %11 : s32i
        %13 = cmp gt %9, %12 : bool
        if %13 {
            %14 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
